kubernetes/dhs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dhs-gitea-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - sandbox.detabord.com
    secretName: sandbox-detabord-tls
  rules:
  - host: dhs.detabord.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dhs-gitea-svc
            port:
              number: 3000
